# solana-fast-client

./: Cargo.toml  index.d.ts  index.js  package.json  test.ts
__test__/: index.spec.mjs
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs
src/quic_client/: mod.rs  on_program_account_change.rs
