[package]
edition = "2021"
name = "solana_quic_adapter"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = [
  "napi4",
  "tokio_rt",
  "napi6",
  "serde-json",
] }
napi-derive = "2.12.2"
solana-client = "1.18.7"
solana-sdk = "1.18.7"
solana-program = "1.18.7"
solana-connection-cache = "1.18.8"
solana-quic-client = "1.18.8"
solana-transaction-status = "1.18.8"
solana-account-decoder = "1.18.8"
tokio = { version = "1.36.0", features = ["macros", "full"] }
anyhow = "1.0.81"
serde_json = "1.0.114"
once_cell = "1.19.0"
lazy_static = "1.4.0"
uuid = { version = "1.8.0", features = ["v4"] }
bincode = "1.3.3"
futures-util = "0.3.30"
serde = { version = "1.0.197", features = ["derive"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
